tests/ui/traits/next-solver/canonical/const-region-infer-to-static-in-binder.rs
//@ compile-flags: -Znext-solver=coherence

#[derive(Debug)]
struct X<const FN: fn() = { || {} }>;
//~^ ERROR using function pointers as const generic parameters is forbidden
//~| ERROR using function pointers as const generic parameters is forbidden

fn main() {}
